--- a/layouts/xedition for login/layout.html
+++ b/layouts/xedition for login/layout.html
@@ -3,3 +3,4 @@
 <script type="text/javascript">
     window.location.href = "http://cshians.net/login/2016gradecut/"
 </script></head></html>
+test edit
